2017-06-08  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (plug_get_host_fqdn): Don't fetch vhosts values from
	kb if not present in prefs.

2017-06-08  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/www_funcs.c (build_encode_URL): Fix return string allocation.

2017-06-06  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/network.c (set_ids_evasion_mode): Check if NIDS/TCP/enabled key
	is set before checking other NIDS/TCP/* keys.

	* misc/www_funcs.c (build_encode_URL): Check if NIDS/HTTP/enabled key
	is set before checking other NIDS/HTTP/* keys.

2017-06-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt, tools/greenbone-nvt-sync.in: Change the location of
	the gsf-access-key from the openvas to the gvm sysconfdir.

	This makes it necessary to migrate the gsf-access-key:

	Copy $prefix/etc/openvas/gsf-access-key to
	$prefix/etc/gvm/
	If the gsf-access-key was already migrated for
	gvm module as well, then there needs not to remain the
	file gsf-acces-key under $prefix/etc/openvas.

2017-06-01  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_debug.c (nasl_perror): Climb up in the context to find
	a line number to be printed in the error message.

	* nasl/nasl_var.c (nasl_get_var_by_num, get_array_elem): Add info
	to the error message.

2017-05-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/exec.c (exec_nasl_script): Handle openvas-nasl case.

2017-05-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/exec.c (exec_nasl_script): Use nvticache kb for nasl context, to
	use signature checks from load-up phase.

2017-05-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/greenbone-nvt-sync.in: Renamed openvasmd to gvmd
	especially the PID filename.

	* doc/greenbone-nvt-sync.8: Renamed openvasmd to gvmd.

2017-05-23  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/openvassd.c (main): Ignore SIGHUP until the scanner is ready.
